[tool.poetry]
name = "taiwan-addresss-database"
version = "0.1.0"
description = ""
authors = ["Steny Liu <steny.liu@epictech.com.tw>"]
readme = "README.md"
packages = [{include = "taiwan_addresss_database"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
autopep8 = "^2.0.2"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
